# stacktrace

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
.github/: pull.yml
test/: BUILD.bazel
