
cc_library(
	name = "stacktrace",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_winapi//:winapi",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_type_traits//:type_traits"
	],
)
